--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+src/assets/scss/*.css*
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,visualstudiocode,intellij
