--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "defguard landing",
   "version": "0.1.0",
+  "scripts": {
+    "fix": "pnpm prettier --write src/assets/scss/**/*.scss && prettier --write src/**/*.html",
+    "lint": "pnpm prettier --check src/assets/scss/**/*.scss && prettier --check src/**/*.html"
+  },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "browser-sync": "^2.27.10",
     "postcss": "^8.4.19",
+    "postcss-cli": "^10.0.0",
+    "postcss-minify": "^1.1.0",
+    "prettier": "^2.8.0",
     "sass": "^1.56.1",
     "stylelint": "^14.15.0",
-    "stylelint-config-standard-scss": "^6.1.0"
+    "stylelint-config-standard-scss": "^6.1.0",
+    "watch-cli": "^0.2.3"
   }
 }
