--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,16 +9,37 @@ tasks:
     cmds:
       - pnpm watch -p "src/assets/scss/style.css" -c "pnpm postcss src/assets/scss/style.css -d src/assets/styles/"
 
+  watch-scripts:
+    cmds:
+      - pnpm rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript --watch --watch.onEnd "pnpm browser-sync reload"
+
   serve:
     cmds:
-      - pnpm browser-sync start --no-ghost-mode  --no-notify --server "src" --files src/assets/styles/**/*.css --files src/**/*.html --files src/scripts/**/*.js --no-open
+      - pnpm browser-sync start --no-ghost-mode  --no-notify --server "src" --files src/assets/styles/**/*.css --files src/**/*.html --files src/scripts/landing/dist/main.min.js --no-open
+
+  build-scripts:
+    cmds:
+      - pnpm rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript
+
+  fix:
+    cmds:
+      - pnpm prettier --write src/index.html
+      - pnpm prettier --write src/assets/scss/**/*.scss
+      - pnpm prettier --write src/assets/scripts/landing/**/*.ts
+  
+  lint:
+    cmds:
+      - pnpm prettier --check src/assets/scss/**/*.scss
+      - pnpm prettier --write src/assets/scripts/landing/**/*.ts
+      - pnpm prettier --check src/**/*.html
 
   build:
     cmds:
-      - pnpm fix
-      - pnpm lint
+      - task: fix
+      - task: lint
+      - task: build-scripts
       - pnpm sass src/assets/scss/index.scss:src/assets/scss/style.css
       - pnpm postcss src/assets/scss/style.css -d src/assets/styles/
 
   default:
-    deps: [watch-sass, watch-css, serve]
+    deps: [watch-sass, watch-css, watch-scripts, serve]
