--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
   "name": "defguard landing",
   "version": "0.1.0",
-  "scripts": {
-    "fix": "pnpm prettier --write src/assets/scss/**/*.scss && prettier --write src/**/*.html",
-    "lint": "pnpm prettier --check src/assets/scss/**/*.scss && prettier --check src/**/*.html"
-  },
   "dependencies": {
+    "@rollup/plugin-json": "^5.0.2",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@swc/core": "^1.3.21",
+    "@swc/helpers": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "browser-sync": "^2.27.10",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
     "postcss-minify": "^1.1.0",
     "prettier": "^2.8.0",
+    "rollup": "^3.5.0",
     "sass": "^1.56.1",
     "stylelint": "^14.15.0",
     "stylelint-config-standard-scss": "^6.1.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
     "watch-cli": "^0.2.3"
   }
 }
