--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,7 +15,7 @@ tasks:
 
   serve:
     cmds:
-      - pnpm browser-sync start --no-ghost-mode  --no-notify --server "src" --files src/assets/styles/**/*.css --files src/**/*.html --files src/scripts/landing/dist/main.min.js --no-open
+      - pnpm browser-sync start --host 0.0.0.0 --no-ghost-mode  --no-notify --server "src" --files src/assets/styles/**/*.css --files src/**/*.html --files src/scripts/landing/dist/main.min.js --no-open
 
   build-scripts:
     cmds:
