--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,17 @@ out
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,intellij
 
+#hugo
+# Generated files by hugo
+/public/
+/resources/_gen/
+/assets/jsconfig.json
+hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/.hugo_build.lock
