--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "motion": "^10.15.5",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
-    "postcss-minify": "^1.1.0",
-    "prettier": "^2.8.6",
-    "sass-embedded": "^1.59.3"
+    "postcss-minify": "^1.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.6"
   }
 }
