--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build
-          path: './'
+          path: './public'
       - run: ls -R
       - name: Setup Pages
         uses: actions/configure-pages@v3
