--- a/data/landing.yml
+++ b/data/landing.yml
@@ -1,6 +1,7 @@
-headerText: >-
-  # Build **Your Own** secure & decentralized Organization
-  **defguard** provides a set of modules for building organizations that value data privacy, and self-custody - securing the whole user journey with identity, vpn, multi-factor authentication, and hardware key management
+headerText: "# Build **Your Own** secure & decentralized Organization
+  **defguard** provides a set of modules for building organizations that value
+  data privacy, and self-custody - securing the whole user journey with
+  identity, vpn, multi-factor authentication, and hardware key management"
 features:
   - icon: shield
     name: Enterprise
@@ -12,19 +13,18 @@ features:
               granted in the future a full and unlimited in time enterprise
               license. To obtain an enterprise license, please fill out the
               following [form.](https://e3lq8l9h2ct.typeform.com/to/KRVZcqMY)
-    image: assets/images/uploads/ef3-placeholder-image.jpg
+    image: /images/webhooks_add.png
   - icon: branching
-    description: >-2
-      Automate processes that involve your organization's data using:
-      * Github - all project repositories
-      *  Issue tracking / feature request - link do issue mgnt w repo defguard
-      * Chat - chat with our developers and community - wacham się co do slack/discord?
+    description: "Automate processes that involve your organization's data using: *
+      Github - all project repositories *  Issue tracking / feature request -
+      link do issue mgnt w repo defguard * Chat - chat with our developers and
+      community - wacham się co do slack/discord?"
     name: Open Source
-    image: assets/images/uploads/ef3-placeholder-image.jpg
+    image: /images/user_admin.png
 socials:
-  - icon: assets/images/uploads/ef3-placeholder-image.jpg
+  - icon: /images/github_black.svg
     name: Github
     link: https://github.com/defguard/defguard/
   - link: https://twitter.com/defguard_net
     name: Twitter
-    icon: assets/images/uploads/ef3-placeholder-image.jpg
+    icon: /images/twitter_black.svg
