--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ backend:
 
 publish_mode: editorial_workflow
 local_backend: true
-media_folder: "/static/images/decap"
+media_folder: "static/images/decap"
 public_folder: "/images/decap" 
 collections:
   - name: "landing"
