--- a/data/navigation.yml
+++ b/data/navigation.yml
@@ -1,1 +1,10 @@
 links:
+  - target: self
+    text: Features
+    link: "#identity"
+  - target: blank
+    text: Documentation
+    link: https://defguard.gitbook.io/defguard/
+  - target: blank
+    text: Try Enterprise
+    link: https://e5lq8l9h2ct.typeform.com/to/KRVZcqMY
