--- a/data/landing.yml
+++ b/data/landing.yml
@@ -4,7 +4,7 @@ header:
   content: Building a secure organization has always been **difficult** and
     **costly**. Defguard provides a beautiful, easy-to-use (business users) and
     deploy (admin/devops) fundament to make your organization secure.
-  image: 
+  image: /images/decap/users.png
 features:
   - icon: branching
     name: Identity
