--- a/data/landing.yml
+++ b/data/landing.yml
@@ -1,6 +1,8 @@
 header:
-  title: A﻿rmy Knife Open Source Security Platform (Identity, VPN, Hardware keys,
-    Web3 and more)
+  title: |-
+    A﻿rmy Knife Open Source Security Platform  
+
+    (Identity, VPN, Hardware keys, Web3 and more)
   content: Building a secure organization has always been **difficult** and
     **costly**. Defguard provides a beautiful, easy-to-use (business users) and
     deploy (admin/devops) fundament to make your organization secure.
