footer from decap

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -101,4 +101,4 @@ collections:
                     default: 'blank'
           - name: copyright
             label: Copyright
-            widget: string
+            widget: markdown
