--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -97,7 +97,21 @@ collections:
             widget: list
             summary: "{{fields.name}}"
             fields:
-              - {label: Icon, name: icon, widget: select, options: ['branching', 'shield', 'wallet'], default: 'shield'}
+              - name: icon
+                label: Icon
+                widget: select
+                default: shield
+                options: 
+                  - branching
+                  - shield
+                  - wallet
+                  - hardkey
+                  - openid
+                  - piechart
+                  - settings
+                  - user
+                  - webhook
+                  - yubikey
               - {label: Name, name: name, widget: string}
               - {label: Section ID, name: id, widget: string, required: false}
               - {label: Description, name: description, widget: markdown}
