--- a/data/landing.yml
+++ b/data/landing.yml
@@ -21,7 +21,7 @@ features:
 
       * Active Directory synchronization (in development)
     image: /images/decap/users.png
-  - icon: shield
+  - icon: googleAuth
     name: Multi-Factor Authentication
     description: >-
       MFA is currently supported with the following methods:
