--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -112,6 +112,7 @@ collections:
                   - user
                   - webhook
                   - yubikey
+                  - googleAuth
               - {label: Name, name: name, widget: string}
               - {label: Section ID, name: id, widget: string, required: false}
               - {label: Description, name: description, widget: markdown}
