Update Meta config “meta”

--- a/data/meta.yml
+++ b/data/meta.yml
@@ -1,2 +1,3 @@
-title: Defguard
-description: Description test
+title: Defguard - open source security army knife (identity, vpn, mfa, ...)
+description: Open Source Security Army Knife - Identity (OpenID Connect), VPN
+  (Wireguard), Yubikey, Web3 and more!
