--- a/data/meta.yml
+++ b/data/meta.yml
@@ -1,3 +1,3 @@
-title: Defguard - open source security army knife (identity, vpn, mfa, ...)
+title: Defguard - open source security army knife (identity, vpn, yubikey, mfa, web3)
 description: Open Source Security Army Knife - Identity (OpenID Connect), VPN
   (Wireguard), Yubikey, Web3 and more!
