Update Landing page configuration “LandingData”

--- a/data/landing.yml
+++ b/data/landing.yml
@@ -1,12 +1,9 @@
 header:
-  title: |-
-    A﻿rmy Knife Open Source Security Platform  
-
-    (Identity, VPN, Hardware keys, Web3 and more)
-  content: Building a secure organization has always been **difficult** and
+  title: Open Source **S﻿ecurity Army Knife** (Identity, VPN, Yubikey, Web3)
+  content: Building a **secure organization** has always been **difficult** and
     **costly**. Defguard provides a beautiful, easy-to-use (business users) and
     deploy (admin/devops) fundament to make your organization secure.
-  image: /images/decap/users.png
+  image: /images/decap/hero-image.png
 features:
   - icon: branching
     name: Identity
