Update Footer config “footerData”

--- a/data/footer.yml
+++ b/data/footer.yml
@@ -21,4 +21,4 @@ columns:
       - target: blank
         text: Twitter
         link: https://twitter.com/defguard_net
-copyright: © 2023 teonite services sp. z .o .o
+copyright: Copyright © [teonite](teonite.com)
