--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -113,10 +113,40 @@ collections:
                   - webhook
                   - yubikey
                   - googleAuth
+                  - lockSec
               - {label: Name, name: name, widget: string}
               - {label: Section ID, name: id, widget: string, required: false}
               - {label: Description, name: description, widget: markdown}
               - {label: Image, name: image, widget: image} 
+              - name: linkButton
+                label: Link button
+                widget: object
+                required: false
+                fields:
+                  - name: link
+                    label: Link
+                    widget: file
+                    required: false
+                  - name: target
+                    label: Target
+                    required: false
+                    widget: select
+                    default: blank
+                    options:
+                      - blank
+                      - self
+                  - name: text
+                    label: Text
+                    widget: string
+                    required: false
+                  - name: alignment
+                    label: Alignment
+                    required: false
+                    widget: select
+                    default: right
+                    options:
+                      - left
+                      - right
   - name: socials
     label: "Socials config"
     files:
