--- a/data/landing.yml
+++ b/data/landing.yml
@@ -68,6 +68,18 @@ features:
 
       * **Webhooks** - outgoing webhooks are a simple way that defguard can notify your systems of ongoing changes in: identity ( user was added, deleted, modified) or hardware key provisioning ( easily propagate pgp/gpg or ssh keys to your internal systems)
     image: /images/decap/webhook.png
+  - icon: lockSec
+    name: Pentested by professionals
+    description: "**defguard** was thoroughly and comprehensively audited by one of
+      the best security organizations in Poland: iSEC (<https://isec.pl>). iSEC
+      is also a strategic security partner of **defguard**, providing pentests
+      for every major release."
+    image: /images/decap/isec.png
+    linkButton:
+      link: /images/decap/testpdf.pdf
+      target: blank
+      text: Download Security Audit
+      alignment: right
   - icon: wallet
     name: Web 3
     description: >-
@@ -79,15 +91,3 @@ features:
 
       Wallet management with MetaMask and Wallet Connect - an easy way for users to validate the ownership of wallets - no need to send wallet addresses through slack/email anymore.
     image: /images/decap/web3-image.png
-  - icon: lockSec
-    name: Pentested by professionals
-    description: "**defguard** was thoroughly and comprehensively audited by one of
-      the best security organizations in Poland: iSEC (<https://isec.pl>). iSEC
-      is also a strategic security partner of **defguard**, providing pentests
-      for every major release."
-    image: /images/decap/isec.png
-    linkButton:
-      link:
-      target: blank
-      text: Download Security Audit
-      alignment: right
