--- a/data/landing.yml
+++ b/data/landing.yml
@@ -86,6 +86,8 @@ features:
 
       * **Webhooks** - outgoing webhooks are a simple way for defguard to notify your systems of ongoing changes in identity management (user was added, deleted, modified) or hardware key provisioning (easily propagateGPG/PGP or SSH keys to your internal systems)
     image: /images/decap/webhook.png
+    linkButton:
+      alignment: left
   - icon: wallet
     name: Web3
     description: >-
@@ -97,3 +99,17 @@ features:
 
       Wallet management with **MetaMask** and **Wallet Connect** is an easy way for users to validate the ownership of wallets as there is no need to send wallet addresses through Slack/email anymore.
     image: /images/decap/web3-image.png
+    linkButton:
+      alignment: right
+  - icon: speed
+    linkButton:
+      target: blank
+      alignment: left
+      link: ""
+    name: Portability & speed
+    description: We've implemented defguard in [Rust](https://www.rust-lang.org/)
+      for code portability, security, and speed. You can easily run defguard on
+      various Linux-based systems with x86, arm, and other architectures
+      (including Raspberry PI, OpenWRT, etc.) and on Unix systems FreeBSD,
+      OpenBSD, and others.
+    image: /images/decap/webhook.png
